tests/errors/first_stage/.extern/saved_keyword/saved_keyword.as
; .extern argument is a saved keyword
.extern prn